--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
+    background: color #f4f4f4;
 }
-.box{
-    width: 100%;
+nav{
+    background-color: #151313;
+    padding: 10px;
+}
+nav a{
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+}
+.container{
+    margin: 50 px auto;
     max-width: 600px;
-    margin: auto;
+    background:white ;
     padding: 20px;
-    background-color: lightblue;
-}
-@media (max-width:600px){
-    .box{
-        background-color: lightcoral;
-    }
-}
-@media(max-width:400px){
-    .box{
-        background-color: lightgreen;
-    }
+    box-shadow: 0px 0px 10px  rgba(red, green, blue, alpha);
+    display: flex;
+    justify-content: space-evenly;  
 }
